...
            app:layout_constraintHorizontal_bias="0.948"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26"
            app:srcCompat="@drawable/logo" />
        <ImageView
            android:id="@+id/profile"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/account_circle"
            app:layout_constraintStart_toStartOf="parent"
...
