...
    android:background="@color/white"
    android:clipChildren="false"
    android:paddingTop="25dp"
    android:clipToPadding="false"
    tools:context="main.MainPatientActivity">
    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="1dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
