<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homepage"
        android:title="@string/home"
        android:icon="@drawable/add_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/history"
...
